Implemented proper caching and filtering.