@@ -1,10 +1,13 @@
 package com.github.alllef.brokerfirmservice.service;
 
+import com.github.alllef.brokerfirmservice.dto.FlatRequestPageableDto;
 import com.github.alllef.brokerfirmservice.dto.FlatRequestTmp;
 import com.github.alllef.brokerfirmservice.dto.FlatRequestDto;
 import com.github.alllef.brokerfirmservice.entity.Flat;
 import com.github.alllef.brokerfirmservice.entity.FlatRequest;
 import com.github.alllef.brokerfirmservice.entity.person.Client;
+import lombok.AllArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
@@ -14,16 +17,18 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
+@AllArgsConstructor
 public class RequestPerformer {
+    private final WebClient webClient;
+
     public List<FlatRequestDto> getFilteredFlatRequestsDto(Flat flat) {
 
-        FlatRequestDto[] response = WebClient.builder().baseUrl("http://localhost:8081")
-                .defaultHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .build()
+        FlatRequestDto[] response = webClient
                 .get()
-                .uri(urlBuilder -> urlBuilder
+                .uri("http://localhost:8081", urlBuilder -> urlBuilder
                         .path("/flat-requests")
                         .queryParam("price", String.valueOf(flat.getPrice()))
                         .queryParam("totalArea", String.valueOf(flat.getTotalArea()))
@@ -41,12 +46,9 @@ public class RequestPerformer {
                 .orElse(new ArrayList<>());
     }
 
-    public List<FlatRequestDto> getAllFilteredFlatRequests(){
-        FlatRequestDto[] response = WebClient.builder().baseUrl("http://localhost:8081")
-                .defaultHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .build()
-                .get()
-                .uri(urlBuilder -> urlBuilder
+    public List<FlatRequestDto> getAllFilteredFlatRequests() {
+        FlatRequestDto[] response = webClient.get()
+                .uri("http://localhost:8081", urlBuilder -> urlBuilder
                         .path("/flat-requests")
                         .build()
                 )
@@ -56,33 +58,45 @@ public class RequestPerformer {
                 .block();
 
         return Optional.ofNullable(response)
-                .map(res -> Arrays.stream(res).toList())
+                .map(res -> Arrays.stream(res).collect(Collectors.toList()))
                 .orElse(new ArrayList<>());
     }
 
-    public List<FlatRequest> getAllUnfilteredFlatRequests() {
-        FlatRequest[] response = WebClient.builder().baseUrl("http://localhost:8082")
-                .defaultHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .build()
-                .get()
-                .uri("/flat-requests")
+    private Optional<FlatRequestPageableDto> getUnfilteredFlatRequestsPageable(int page, int size) {
+        FlatRequestPageableDto response = webClient.get()
+                .uri("http://localhost:8082", uriBuilder -> uriBuilder
+                        .path("/flat-requests")
+                        .queryParam("page", String.valueOf(page))
+                        .queryParam("size", String.valueOf(size))
+                        .build()
+                )
                 .accept(MediaType.APPLICATION_JSON)
                 .retrieve()
-                .bodyToMono(FlatRequest[].class)
+                .bodyToMono(FlatRequestPageableDto.class)
                 .block();
 
-        return Optional.ofNullable(response)
-                .map(res -> Arrays.stream(res).toList())
-                .orElse(new ArrayList<>());
+        if (Optional.ofNullable(response).isPresent())
+            return Optional.of(response);
+        return Optional.empty();
+    }
+
+    public List<FlatRequest> getAllUnfilteredFlatRequestsPageable(int pageSize) {
+        List<FlatRequest> resultList = new ArrayList<>();
+        Optional<FlatRequestPageableDto> flatRequestPageableDto = getUnfilteredFlatRequestsPageable(0, pageSize);
+        if (flatRequestPageableDto.isPresent()) {
+            resultList.addAll(flatRequestPageableDto.get().getContent());
+            for (int i = 1; i < flatRequestPageableDto.get().getPagesTotal(); i++) {
+                FlatRequestPageableDto tmpFlatRequestPageableDto = getUnfilteredFlatRequestsPageable(i, pageSize).orElseThrow();
+                resultList.addAll(tmpFlatRequestPageableDto.getContent());
+            }
+        }
+        return resultList;
     }
 
     public Client getRequestClientById(Long clientId) {
 
-        return WebClient.builder().baseUrl("http://localhost:8082")
-                .defaultHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                .build()
-                .get()
-                .uri(urlBuilder -> urlBuilder
+        return webClient.get()
+                .uri("http://localhost:8082", urlBuilder -> urlBuilder
                         .path("/flat-requests/clients/{id}")
                         .build(clientId)
                 )
